--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.3.1",
     "vuetify": "^2.2.30",
+    "vuetify-confirm": "^2.0.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
