--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^5.3.45",
     "core-js": "^3.6.4",
+    "jszip": "^3.4.0",
     "uuid": "^8.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.1",
